# paidy-task

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
migrations/: init.sql  insert.sql
src/: config.rs  main.rs
src/db/: mod.rs  sql.rs  sql_connector.rs
src/http/: routes.rs
src/model/: error.rs  model.rs
src/prometheus/: mod.rs  prom.rs  system_info_prom.rs
src/resources/: base_config.json  dev_config.json  e2e_config.json  prod_config.json
src/test/: infinite_test.rs  mod.rs  test_data.rs  testcontainer_suit.rs
