[package]
name = "paidy-home-task"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.24"
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "2.0.14"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "chrono", "derive"] }
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4.13.0"
actix-cors = "0.7.1"
base64 = "0.22.1"
prometheus = "0.14.0"
actix-web-prom = "0.10.0"
sysinfo = "0.39.5"
lazy_static = "1.5.0"
tokio = { version = "1.52.3" }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde_json = "1.0.150"
testcontainers = { version = "0.27.3", features = ["docker-compose"] }
rand = "0.10.1"